--- a/recipes/fried-rice.html
+++ b/recipes/fried-rice.html
@@ -6,6 +6,17 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-    
+    <a href="/index.html">Homepage</a>
+    <h2>Fried Rice</h2>
+    <p>
+
+    </p>
+    <h3>Ingredients:</h3>
+    <ul>
+
+    </ul>
+    <ol>
+
+    </ol>
 </body>
 </html>
