Completed Lagasna.html, added stylesheet as image was too big

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles.css">
     <title>Odin Recipes</title>
 </head>
 <body>
     <a href="/index.html">Homepage</a>
     <h2>Lasagna</h2>
+    <img src="/images/lasagna.jpg" alt="slice of lasagna" id="lasagna">
     <p>
         This recipe will describe how to cook a simple, perfect, crispy lasagna. This is more of a relative guide on how I personally make lasagna, and the ingredients aren't perfectly measured.
     </p>
@@ -44,10 +46,25 @@
     </ul>
     <p>First, we will be creating the bolognese:</p>
     <ol>
-        <li>The first step to your bolognese would be the vegtables. Dice all of the vegtables except the carrot which will be grated. With your diced mushrooms, add them to a pan with a small amount of water and fry them on a medium heat. I like to add a small bit of garlic granules and salt to them for taste.</li>
-        <li>Once the mushrooms have had a decent amount of the moisture cooked out of them, store them for later use.</li>
+        <li>The first step to your bolognese would be the vegtables. Dice all of the vegtables except the carrot which will be grated. With your diced mushrooms, add them to a pan with a small amount of water and fry them on a medium heat. I like to add a small bit of salt and pepper for taste.</li>
+        <li>Once the mushrooms have had a decent amount of the moisture cooked out of them, put them to the side for later use.</li>
         <li>Next, will be the onions. Put olive oil in a pan on high temperature, then once the oil is hot put the onions in and keep moving the onions for about a minute on high, then drop the temperature on low. Keep the onions cooking low until they brown quite decently</li>
-        <li>Once the onions have browned a bit, add the diced celery and </li>
+        <li>Once the onions have browned a bit, add the diced celery and grate in some carrot using the small holes on a grater. Let this cook on low temperature and stir every minute or so for about 4 minutes until everything is basically cooked.</li>
+        <li>Finally, the star of the show garlic. Add in the garlic and the previously cooked mushrooms and stir on low temperature for about 3 minutes. Add herbs of your choice, my favourite would be oregano because we will be using pasata. Add salt and pepper to taste. Store the vegtable amalgamation to  the side.</li>
+        <li>Next, put some olive oil in a pan and heat it on medium high then cook the mince for a few minutes until the meat is mostly browned. Drop the heat to a medium low then add the vegtables and a few dashes of Worcestershire sauce if desired. Mix the ingredients and let them get to know eachother.</li>
+        <li>Next, slowly add pasata, as to not boil the current ingredients, once it has all been added put the heat on low and stir occasionally until the bolognese has thickened, then kill the heat and put to the side.</li>
     </ol>
+    <p>You have now created the bolognese and we will be moving onto the easy parts.</p>
+    <p>The next recipe will be for the bechamel sauce.</p>
+    <ol>
+        <li>First, we will start with a roux. Get a heaped tablespoon of butter and put it in a pan on low heat. Once the butter has melted. Put small bits of flour in at  a time and stir with a whisk until it has become a thick liquid that wouldn't instantly fall out the pan if you tilted it.</li>
+        <li>Next, add in a tablespoon of creamcheese (optional) and stir until encorperated.</li>
+        <li>Slowly add bits of milk until it becomes a white sauce. It will become a bit of a dough at first but keep adding milk and stiring and it will become a white sauce. Once it has become a white sauce that is a little less thick than the roux, that is it done and you can kill the heat.</li>
+    </ol>
+    <p>And now it is time to assemble into a masterpiece.</p>
+    <p>I like to start with a small layer of bolognese, then I add a small amount of bechamel that I drizzle on top. Then the lasagna sheet, then bechamel until the sheets are covered and repeat. (bolognese, bechamel, lasagna, bechamel, repeat)</p>
+    <p>Finally when you have reached your final sheet and put bechamel on top, put grated cheese of your choice on top, I like to add small bits of cream cheese, cheddar and parmesan, then top it with a small bit of oregano.</p>
+    <p>Finally, put the lasagna in an oven at about 175&degC or about 340&degF for about 35-40 Minutes. Enjoy your lasagna.</p>
+
 </body>
 </html>
