--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <ul>
             <li><a href="recipes/fried-rice.html">Fried Rice</a></li>
             <li><a href="/recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="/recipes/scrambled-eggs.html">Scrambled Eggs</a></li>
         </ul>
         
     </body>
