Completed recipes and added to styles

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/styles.css">
-        <title>Odin Recipes</title>
+        <title>Luke's Recipes</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <h1>Lukes's Recipes</h1>
         <h2>Recipes:</h2>
-        <ul>
-            <li><a href="recipes/fried-rice.html">Fried Rice</a></li>
-            <li><a href="/recipes/lasagna.html">Lasagna</a></li>
-            <li><a href="/recipes/scrambled-eggs.html">Scrambled Eggs</a></li>
+        <ul id="recipe-links">
+            <li><a class="link" href="recipes/fried-rice.html">Fried Rice</a></li>
+            <li><a class="link" href="/recipes/lasagna.html">Lasagna</a></li>
+            <li><a class="link" href="/recipes/scrambled-eggs.html">Scrambled Eggs</a></li>
         </ul>
         
     </body>
