--- a/recipes/fried-rice.html
+++ b/recipes/fried-rice.html
@@ -4,20 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles.css">
-    <title>Odin Recipes</title>
+    <title>Luke's Fried Rice</title>
 </head>
 <body>
-    <a href="/index.html">Homepage</a>
+    <a class="link" href="/index.html">Homepage</a>
     <h2>Fried Rice</h2>
+    <img src="/images/fried-rice.jpg" alt="Fried Rice" id="fried-rice">
     <p>
-
+        This recipe will go over the basics of fried rice, and some ingredients. Fried rice is more of a do-what-you-feel dish, and I believe there isn't any specific way of doing it exactly. Just use what you have or what you want.
     </p>
     <h3>Ingredients:</h3>
     <ul>
-
+        <li>Rice (preferably left over rice, slightly dry)</li>
+        <li>Eggs</li>
+        <li>Soy Sauce</li>
+        <li>Worcestershire Sauce</li>
+        <li>Rice Vinegar</li>
+        <li>Ginger</li>
+        <li>White Pepper</li>
+        <li>Chilli Flakes</li>
+        <li>Salt and Pepper</li>
+        <li>Honey</li>
+        <li>Garlic</li>
+        <li>Onion (Spring onion is much better than regular onion)</li>
     </ul>
+    <p>Now we will go through the prepping process.</p>
     <ol>
-
+        <li>First what I like to do is prepare the spring onion, cut the onion in half, once side being white and one side being green, the green will be used as a topping at the end. Chop up the onion into small rings.</li>
+        <li>I also like to thinly chop up some garlic, into thin garlic chips and fry them up in veggie oil until they are golden brown, being careful to not burn them. These will also be used as a topping.</li>
+        <li>Beat about 2-4 eggs into a jug, bowl or any container for later.</li>
     </ol>
+    <p>Next is the cooking process, which is a pretty simple process</p>
+    <ol>
+        <li>First, put a good amount of vegtable oil in a pan or wok, enough to cover the bottom and put on high heat. Once the oil is hot, if you want to add vegtables such as peas or carrot, fry them up. Add the white parts of the spring onion and fry.</li>
+        <li>Add the beaten eggs into the pan and stir. They should start cooking almost instantly. Add the left over rice next and mix up what is already in the pan so that all the ingredients are even.</li>
+        <li>Add the spices and the ground ginger, or if you have fresh ginger grate it finely. Also add about 2 cloves of crushed garlic.</li>
+        <li>Next add the liquids. There isn't a specific amount but be careful with the vinegar as to not add too much. add the liquids to the edges of the pan and mix, don't add directly in the middle. The honey can be gently drizzled over, and again don't add too much it's not a dessert.</li>
+        <li>Add salt and pepper to taste and that should be that done.</li>
+    </ol>
+    <p>Now the fun part is plating it. I like to pack some into a bowl and then use it as a mould to put on a plate. Add the garlic chips and green parts of the spring onion. A nicely fried egg on top also looks good, maje sure it is runny. Add some chilli flakes on top and some sesame seeds and its all good to go.</p>
 </body>
 </html>
