--- a/recipes/scrambled-eggs.html
+++ b/recipes/scrambled-eggs.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles.css">
-    <title>Odin Recipes</title>
+    <title>Luke's Eggs</title>
 </head>
 <body>
-    <a href="/index.html">Homepage</a>
+    <a class="link" href="/index.html">Homepage</a>
     <h2>Scrambled Eggs</h2>
     <img src="/images/scrambled-eggs.jpg" alt="custardy scrambled eggs" id="scrambled-eggs">
     <p>
@@ -25,7 +25,7 @@
         <li>Next, put the eggs in a cold pan, then put them on the stove on a medium-low heat and keep stirring the eggs.</li>
         <li>Once the eggs start to cook and start to become slightly solid, take the pan off the heat and keep stirring, and a small bit of butter prefferably cold, about half a teaspoon.</li>
         <li>Put the eggs back on the heat and keep repeating this process of: off the heat when it starts cooking, add butter, back on the heat. And remember to keep stirring.</li>
-        <li>Do this until thhe egss become a similar texture to a custard, or until you like them.</li>
+        <li>Do this until the eggs become a similar texture to a custard, or until you like them.</li>
     </ol>
     <p>After the eggs have cooked, I like to put them on some nice bread with avocado and hot sauce, and add salt and pepper to taste.</p>
 </body>
