--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles.css">
-    <title>Odin Recipes</title>
+    <title>Luke's Lasagna</title>
 </head>
 <body>
-    <a href="/index.html">Homepage</a>
+    <a class="link" href="/index.html">Homepage</a>
     <h2>Lasagna</h2>
     <img src="/images/lasagna.jpg" alt="slice of lasagna" id="lasagna">
     <p>
